<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".MainActivity">
        <TextView
            android:id="@+id/tvPkg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_pkg"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tvFwVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_current_version"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tvFileSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_current_filesystem"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_upgrade_operation"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/black" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sdcard_upgrade"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updateClick"
            android:text="update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|top"
            android:text="@string/udisk_upgrade"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|top"
            android:text="@string/broadcast_upgrade"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|top"
                android:text="@string/things_to_note"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|top"
                android:text="@string/stable_usb_data"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|top"
                android:text="@string/sign_match_firmware"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|top"
                android:text="@string/update_load_finish"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|top"
                android:text="@string/check_file_damage"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|top"
                android:text="@string/exception_notify"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="dhcpClick"
            android:text="动态IP"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="staticClick"
            android:text="静态IP"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openEthClick"
            android:text="开启以太网"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="closeEthClick"
            android:text="关闭以太网"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left|center"
                android:onClick="clearTvRemarksClick"
                android:text="操作结果"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnClearTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="clearTvRemarksClick"
                android:text="清除" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/black" />


        <TextView
            android:id="@+id/tvRemarks"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>
